--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,9 @@ jobs:
           ado_project: "TestProject"
           ado_area_path: "optional_area_path\\optional_area_path"
           ado_iteration_path: "optional_iteration_path\\optional_iteration_path"
-          ado_wit: "User Story"
-          ado_new_state: "New"
-          ado_active_state: "Active"
-          ado_close_state: "Closed"
+          ado_wit: "Issues"
+          ado_new_state: "New item"
+          ado_active_state: "Doing"
+          ado_close_state: "Done"
           ado_bypassrules: true
           log_level: 100
